crates/bitnet-common/tests/snapshots/snapshot_wave5__backend_request_display_all_variants.snap
---
source: crates/bitnet-common/tests/snapshot_wave5.rs
expression: displays
---
[
    "auto",
    "cpu",
    "gpu",
    "cuda",
    "hip",
    "oneapi",
]
