crates/bitnet-common/tests/snapshots/snapshot_wave5__backend_startup_summary_auto_gpu.snap
---
source: crates/bitnet-common/tests/snapshot_wave5.rs
expression: summary.log_line()
---
requested=auto detected=[cuda, cpu-rust] selected=cuda
