crates/bitnet-common/tests/snapshots/snapshot_wave5__device_all_variants_debug.snap
---
source: crates/bitnet-common/tests/snapshot_wave5.rs
expression: output
---
[
    "Cpu",
    "Cuda(0)",
    "Hip(1)",
    "Npu",
    "Metal",
    "OpenCL(2)",
]
