crates/bitnet-common/tests/snapshots/snapshot_wave5__device_default_is_cpu.snap
---
source: crates/bitnet-common/tests/snapshot_wave5.rs
expression: "format!(\"{dev:?}\")"
---
Cpu
