crates/bitnet-common/tests/snapshots/snapshot_wave5__kernel_backend_display_all_five_variants.snap
---
source: crates/bitnet-common/tests/snapshot_wave5.rs
expression: displays
---
[
    "cpu-rust",
    "cuda",
    "hip",
    "oneapi",
    "cpp-ffi",
]
