crates/bitnet-common/tests/snapshots/snapshot_wave5__kernel_capabilities_compiled_backends_priority_order.snap
---
source: crates/bitnet-common/tests/snapshot_wave5.rs
expression: backends
---
[
    "cuda",
    "hip",
    "oneapi",
    "cpp-ffi",
    "cpu-rust",
]
