crates/bitnet-common/tests/snapshots/snapshot_wave5__kernel_capabilities_summary_cpu_only.snap
---
source: crates/bitnet-common/tests/snapshot_wave5.rs
expression: caps.summary()
---
simd=[SIMD] backends=[cpu-rust]
