crates/bitnet-common/tests/snapshots/snapshot_wave5__kernel_capabilities_summary_full_stack.snap
---
source: crates/bitnet-common/tests/snapshot_wave5.rs
expression: caps.summary()
---
simd=[SIMD] backends=[cuda,cpp-ffi,cpu-rust]
