crates/bitnet-common/tests/snapshots/snapshot_wave5__quantization_type_debug_all_variants.snap
---
source: crates/bitnet-common/tests/snapshot_wave5.rs
expression: debugs
---
[
    "I2S",
    "TL1",
    "TL2",
]
